--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         {% if title %}
         <title> {{ title }}</title>
         {% else %}
-        <title> Welcome to the impresive Elevator Piches website </title>
+        <title>  Elevator Piches  </title>
         {% endif %}
     </head>
     <body>
