--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
       
         <!-- Content block -->
 
-        {% block content %}
+        <!-- {% block content %} -->
         {%block styles %}
         {{super()}}
         <!--Importing the simple mde css and js files  -->
@@ -25,6 +25,6 @@
         {{ simplemde.js }}
         {% endblock %}
 
-        {% endblock%}
+        <!-- {% endblock%} -->
     </body>
 </html>
