--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,6 @@
         <div class="container">
             <h1>Welcome to the impressive elevator pitches website </h1>
         </div>
-
+        {% endblock %} 
     </body>
 </html
