--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,9 +17,9 @@
                 {% if current_user.is_authenticated %}
                
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                <li><a href="{{url_for('auth.logout')}}">Logout</a></li>
+                <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                 {% else %}
-                <li><a href="{{url_for('auth.login')}}">Login</a></li>
+                <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
                 {%endif%}
               </ul>
     
