--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html'%}
-<!-- {% import 'macros.html' as macro%} -->
+{% import 'macros.html' as macro%}
 <!DOCTYPE html>
 <html>
     <head>
@@ -23,6 +23,18 @@
         {% block content %}
         <div class="container">
             <h1>Welcome to the impressive elevator pitches website </h1>
+            <h3> Ent category</h3>
+       <ul>
+            {{ macro.displayCategoryList(ent)}}
+        </ul>
+        <h4> Business category </h4>
+        <ul>
+            {{ macro.displayCategoryList(business)}}
+        </ul>
+        <h4> Health category </h4>
+        <ul>
+            {{ macro.displayCategoryList(health)}}
+        </ul>
         </div>
         {% endblock %} 
     </body>
