--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -1,40 +1,26 @@
-<h1> Hello Movie {{ id }} </h1>     
-{% extends 'base.html'%}
+{% extends 'base.html' %} 
+
 {% import 'macros.html' as macro%}
-<!-- Content block -->
+
+
 {% block content %}
-<div class="container">
-
-    <!-- Poster background -->
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{movie.poster}}) no-repeat center center">
-        </div>
-
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
-            <h3>{{ speech.title }}</h3>
-<!-- 
-            <p class="overview"> {{ movie.overview }}</p>
-            <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p> -->
-            <a class="ratings" href="/category/pitch/new/{{speech.id}}"> Write a new pitch</a>
-
-
-        </div>
+    <div class=" col-md-10 col-md-offset-1 col-sm-12">
+        <h3 class="text-center">{{category.name|upper}}</h3>
+         <a class="btn btn-primary text-center text-danger " href="/category/new-pitch/{{category.id}}"> Post a Pitch</a>
+         <hr>
     </div>
-    <div class="row">
 
-        <h1>Pitches</h1>
-        <hr>
+    {% if pitches %}
+      <div class="col-sm-12 col-md-8">
+          {{ macro.displayPitches(pitches)}}
+      </div>
+  {%else%}
+        <div class="well">
+          <h4 style="padding:10%; text-align:center; font-size:50px">NO PITCHES IN THIS CATEGORY. </h4>
+        </div>
+  {% endif %}
 
-        {% if pitches %}
-            {{macro.displayPitches(pitches)}}
-
-        {% else%}
-            <h3 class="text-center">This category has no pitches  </h3>
-
-            <a class="btn btn-success btn-lg text-center" href="/category/pitch/new/{{catetegory.id}}"> Write a new review</a>
-        {% endif %}
-
-    </div>
+{% end macro %}
 
 </div>
 {% endblock %}
