--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,31 +11,43 @@
         <title>Elevator Pitches </title>
         {% endif %}
     </head>
-    <body>
-        <!-- Styles block -->
+    
+{% block styles%}
+    {{ super() }} <!--super() function tells Jinja not to override any code that is defined in the block-->
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
 
-        {% block styles%}
-        {{ super() }}
-        <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
-        {% endblock %} 
 
-        <!-- Content block -->
-        {% block content %}
-        <div class="container">
-            <h1>Welcome to the impressive elevator pitches website </h1>
-            <h3> Ent category</h3>
-       <ul>
-            {{ macro.displayCategoryList(ent)}}
-        </ul>
-        <h4> Business category </h4>
-        <ul>
-            {{ macro.displayCategoryList(business)}}
-        </ul>
-        <h4> Health category </h4>
-        <ul>
-            {{ macro.displayCategoryList(health)}}
-        </ul>
+{% block content %}
+    <h1>Welcome to the impressive elevator pitches website </h1>
+    <br>
+    <div class="container-fluid" style="font-family: 'Russo One', sans-serif;">
+      <div class="row"> 
+        
+          <div class="container" id="block-text">
+            <br>
+            <div class="col-md-5">
+              <img src="/static/images/minute.jpg" style= "margin-right: 100%;padding-right: 100%;">
+            </div>
+            <div class="col-md-1"></div>
+
+            <br>
+            <div class="col-md-6">
+            <p> In life you only have 60 seconds to impress someone. 1 minute to make or break you. How do we make sure that you use your 1 minute to actually say something meaningful? </p>
+            </div>
         </div>
-        {% endblock %} 
-    </body>
-</html
+      </div>
+
+          <hr>
+
+          <div class="container">
+            <h3 class="add-category"><a class="btn btn-primary" href="/add/category" style="background-color:#002457; float:right;"><span aria-hidden="true"> ADD CATEGORY </span></a></h3>
+          </div>
+            {{ macro.displayCategoryList(categories) }}
+          
+          <!--<footer class="fixed-bottom">
+            <img src="/static/images/pitch.png" />
+          </footer> -->
+      </div>
+    </div>
+{% endblock %}
