--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,15 +1,58 @@
-{% macro displayCategoryList(category_list) %}
-  {% for category in category_list%}
-        <div>
-          <a href="{{url_for('.category',id=category.id)}}"><p>{{category.cat_name|upper}}</p></a>
+{% macro displayPitchList(pitch_list) %} {% for pitch in pitch_list %}
+
+<div class="col-md-3 col-sm-6 col-xs-6" id='pitch'>
+    <div class="card">
+        <div class="card-header" style="color: white;">
+            <b>{{pitch.category}}</b>
         </div>
+        <div class="pitch-body">
+            <h5 class="pitch-title" style="color: rgba(0, 0, 0, 0.7);">{{pitch.title}}</h5>
+            <p class="pitch-text" style="color: rgb(73, 72, 72);">
+                <i>{{pitch.pitch_content}}</i>
+            </p>
+        </div>
+        <ul class="list">
+            <li class="list-group-item" style="font-size: 14px; color: dodgerblue;">~ {{pitch.author}}
+                <a href="">
+                    <span class="fas fa-thumbs-up"></span>
+                </a>&ensp;
+                <a href="">
+                    <span class="fas fa-thumbs-down"></span>
+                </a>&ensp;
+                <a href="{{url_for('main.comments')}}">
+                    <span class="fas fa-comments"></span>
+                </a>
+            </li>
+            <li class="list-group-item">{{pitch.published_at}}</li>
+            <li class="list-group-item" style="background-color: whitesmoke;">
+                <a href="{{url_for('main.new_pitch')}}" class="new_pitch">
+                    <span id="new_pitch">Click to create a new Pitch
+                        <span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
 
-    {% endfor %}
-{% endmacro %}
+{% endfor %} {% endmacro %} 
 
+{% macro displayCommentsList(comments_list) %} {% for comment in comments_list %}
 
-{% macro displayCategories(categories)%}
-  {% for category in categories %}
-    <p>{{category.cat_name}}</p>
-  {% endfor %}
+<div class="container">
+
+    {{comment.body}}
+
+</div><br>
+
+<style>
+    .container {
+        background-color: #0e91a6; 
+        padding: 3.5% 5%; 
+        margin-left: 3%;
+        border-radius: 10px;
+        color: whitesmoke;
+    }
+</style>
+
+{% endfor %} 
 {% endmacro %}
