--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,27 +1,40 @@
-<div class="navbar navbar-inverse" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">ElevatorPitches</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-               
-                <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
-                {% else %}
-                <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-                {%endif%}
-              </ul>
-    
-        </div>
+<div class="navbar navbar-dark bg-primary" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <ul>
+        <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/pitches/new/"> PostPitch </a>
+      </ul>
     </div>
+    <div class="navbar-nav">
+      <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/"> Home </a>
+
+    </div>
+
+    <div class="navbar-collapse collapse">
+        <h1 style="text-align:center;font-family: arizonia">Welcome to impressive elevator pitches  </h1>
+      <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li style="color:whitesmoke">{{current_user.username}}</li>
+        <li><a style="color: whitesmoke;" href="{{url_for('auth.logout')}}">Sign out</a></li>
+        {% else %}
+        <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}">Sign in</a></li>
+        {%endif%}
+      </ul>
+    </div>
+  </div>
+
+
+  <div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav navbar-right">
+      <li style="color:whitesmoke"></li>
+      <li><a style="color: whitesmoke;" href="{{url_for('auth.logout')}}"></a></li>
+      <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}"></a></li>
+    </ul>
+  </div>
+</div >
