add updates on elevator pitch

--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
   {% block content %}
-    <div class="container">
+    <div class="container-fruid">
       <h3 style="color:black;text-align: center">Pitch Categories</h3>
       <br>
       <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
@@ -29,7 +29,12 @@
         <div class="col-md-6">
         <p style="font-size:20px"> You can impress someone in one minute to make your carreer or destroy it. How do we make
          sure that you use your one minute to actually say something meaningful In life sine you only have 60 seconds </p>
+         <p style="font-size : 20px"> To view posted pitches click on category you want to view . Enjoy impressive pitches here and get 
+           inspiration</p>
         </div> 
+        <div class="col-md-6">
+          <img src="https://www.thebalancecareers.com/thmb/aVyLW5BuvP7ufJk__UYAmUvOScw=/2122x1194/smart/filters:no_upscale()/GettyImages-149320427-56b094013df78cf772cfcdab.jpg" height="250" width="500"> 
+        </div>
 
       <div class="tab-content">
         <div id="product" class="container tab-pane active"><br>
@@ -46,6 +51,11 @@
           {{ macro.display(promotionpitch) }}
         </div>
         
+      </div>
+      <div class="container-fruid">
+        <footer>
+          <p style="background-color:black;text-align: center;font-size: 40px;color: white;"> Always be effective</p>
+        </footer>
       </div>
     </div>
   {% endblock %}
